--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="CSS\style.css" />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Pangolin"
@@ -16,7 +16,7 @@
   </head>
 
   <body class="body">
-    <img src="frame.png" id="frame" />
+    <img src="images\frame.png" id="frame" />
     <button id="reset" style="margin-left: 1370px;">
       Reset
     </button>
@@ -35,8 +35,8 @@
       <input type="number" value="22" id="height" readonly />
     </form>
     <div class="gridContainer"></div>
-    <script src="script.js"></script>
+    <script src="script\script.js"></script>
   </body>
 
-  <footer><img src="fish.png" id="fish" /></footer>
+  <footer><img src="images\fish.png" id="fish" /></footer>
 </html>
